--- a/package.json
+++ b/package.json
@@ -19,7 +19,17 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ng-select/ng-select": "^3.0.6",
+    "@sweetalert2/ngx-sweetalert2": "^5.1.0",
+    "alertifyjs": "^1.11.4",
+    "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.2",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^8.15.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
